--- a/static/index.html
+++ b/static/index.html
@@ -46,6 +46,7 @@
             padding: 10px;
             font-size: 16px;
             background-color: white;
+            text-align: center;
         }
 
         input[type="submit"]:hover {
